# phd-thesis

./: .airesrc.bck  .airesrc.bck.1  .bashrc  .gitconfig  .gitignore  .python_history-37626.tmp  .root_hist  .screenrc  .vimrc  .zshrc  README.md
.jupyter/: migrated
Data/: README.md
Data/PropagationGrammage/: propagation.ipynb
Data/SDMonitHistos/: out_dec2021.txt  out_dec2022.txt  out_dec2023.txt  out_jun2022.txt  out_jun2023.txt  out_mar2022.txt  out_mar2023.txt  out_oct2023.txt  out_sep2022.txt  out_sep2023.txt
Data/StationEfficiencies/: NadiaEarlyFilteredDownsampled_ssd_and_t1.txt  NadiaFilteredDownsampled_ssd_and_t1.txt  NadiaLateFilteredDownsampled_ssd_and_t1.txt  NuriaJrFilteredDownsampled_ssd_and_t1.txt
Data/irradiance_calculations/: irradiance.ipynb  moon.csv
Data/spectrum/: AKENO.txt  CombinedSpectrum_ICRC2017.txt  HAWC.txt  JACEE.txt  Kascade.txt  KascadeGRANDE.txt  auger_icrc2021.txt  spectrum_calculations.ipynb
Outreach/: template.odp
Projects/: new_pulse_height_spectrum.py  peak_charge.py  read_packs_v3.py
Projects/SSDTriggerEfficiency/SdSimulationReconstruction/: CMakeLists.txt  DummyCentralTrigger.h  DummyTankTriggerSimulator.cc  DummyTankTriggerSimulator.h  Makefile  PMTSimData.h  README  StationTriggerData.cc  sync_changes.sh
Projects/SSDTriggerEfficiency/SdSimulationReconstruction/temp/: StationTriggerData.cc  sync_changes.sh
Thesis/: EXAMPLE.tex  KITtitle.sty  KITtitle_gap.sty  Makefile  main.bcf  main.loc  main.lof  main.ptc  main.run.xml  main.soc  main.tdo  main.tex  mybib.bib  mybib.bib.bak  title.tex  utilities.tex
(+661 files in other folders)
